// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterProducts reducer returns all products if no filter set 1`] = `
Array [
  Object {
    "category": "one",
    "colors": Array [
      "blue",
    ],
  },
  Object {
    "category": "two",
    "colors": Array [
      "green",
    ],
  },
  Object {
    "category": "two",
    "colors": Array [
      "blue",
    ],
  },
]
`;

exports[`filterProducts reducer returns only categories with categories filter 1`] = `
Array [
  Object {
    "category": "one",
    "colors": Array [
      "blue",
    ],
  },
]
`;

exports[`filterProducts reducer returns only color products with color filter 1`] = `
Array [
  Object {
    "category": "one",
    "colors": Array [
      "blue",
    ],
  },
  Object {
    "category": "two",
    "colors": Array [
      "blue",
    ],
  },
]
`;

exports[`filterProducts reducer returns only items with both filters set 1`] = `
Array [
  Object {
    "category": "two",
    "colors": Array [
      "green",
    ],
  },
]
`;
